:zap:resolved overflow issue: added fixed height and scrollbar to cart items (cart section)

--- a/src/styles/addCart.css
+++ b/src/styles/addCart.css
@@ -705,7 +705,37 @@ table.billing {
 }
 
 .cartItems {
+  margin-top: 7.5px;
   padding: 20px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary-color) transparent;
+  height: 55.5vh;
+  width: 100%;
+}
+
+
+/* .cartItems::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+  border-radius: 50%;
+} */
+
+/* Style the scrollbar track */
+/* .cartItems::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+} */
+
+/* Style the scrollbar thumb */
+/* .cartItems::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 5px;
+} */
+
+/* Add a hover effect to the thumb */
+.cartItems::-webkit-scrollbar-thumb:hover {
+  background-color: #555555;
 }
 
 .rightPartitionCart {
